# crossguid

./: .gitignore  CMakeLists.txt
include/crossguid/: guid.hpp
include/internal/: guid-android.hpp
src/: guid.cpp
src/platform/: android.cpp  cfuuid.cpp  libuuid.cpp  windows.cpp
test/: CMakeLists.txt
test/src/: TestMain.cpp
